Bug 858749 - OdinMonkey: fix join after break when block is empty (r=sstangl)